# MA-Scientific-Computing

./: LICENSE  README.md
source/: CMakeLists.txt  main.cc  mathfns.cc  matrixgen.cc  read.cc  sample.cc  util.cc  write.cc
source/include/: mac0.h  mathfns.h  matrixgen.h  read.h  sample.h  util.h  write.h
